app: fix markets view layout issues
Fixes issues where overflow and div sizing were acting weird on resize.
Creates and uses a stylish scrollbar class. Enables manual chart
div resizing and remembers the user's preference across sessions.

Also correct a recent regression where certain order form elements
were not being hidden for market orders.

Hide cancel bttn for immediate limits.

Fix cancel dialogue remaining value.

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -152,6 +152,26 @@ input[type=number] {
   right: 0;
 }
 
+.stylish-overflow {
+  overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #7774 #7771;
+
+  /* Works on Chrome/Edge/Safari */
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #7771;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #7774;
+    border-radius: 4px;
+  }
+}
+
 div.note-indicator {
   width: 8px;
   height: 8px;
